added github oauth
